<resources>
    <string name="app_name">My CycleWay</string>
    <string name="sign_in_with_facebook">Sign-in With Facebook</string>
    <string name="sign_in_with_google">Sign-in with Google</string>
    <string name="sign_in_with_email">Sign-in with Email</string>
    <string name="sign_in">Sign-In</string>
    <string name="or">OR</string>
    <string name="upload_a_photo">Upload A Photo</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">1549249921809499</string>
    <string name="fb_login_protocol_scheme">fb1549249921809499</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="search">search</string>
    <string name="longitude">Longitude</string>
    <string name="tv_lat">tv_lat</string>
    <string name="tv_lng">tv_lng</string>
    <string name="start">Start</string>
    <string name="points">Points</string>
    <string name="to">TO</string>
    <string name="button">Button</string>

</resources>
